crates/ars-components/src/utility/group/snapshots/ars_components__utility__group__tests__group_root_default.snap
---
source: crates/ars-components/src/utility/group.rs
expression: "snapshot_attrs(&Api::new(default_props()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "group",
            ),
        ),
        (
            Id,
            String(
                "",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
